updated requirements.txt file

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,34 @@
+appnope @ file:///opt/concourse/worker/volumes/live/6ca6f098-d773-4461-5c91-a24a17435bda/volume/appnope_1606859448531/work
 backcall==0.2.0
 certifi==2021.5.30
 cycler==0.10.0
 Cython==0.29.24
 decorator==4.4.2
 hdbscan==0.8.27
+ipykernel @ file:///opt/concourse/worker/volumes/live/b72ce213-516a-4998-6411-bacb2eb6d5d1/volume/ipykernel_1607452776186/work/dist/ipykernel-5.3.4-py3-none-any.whl
+ipython @ file:///opt/concourse/worker/volumes/live/53a0fafb-1ff1-44d4-4ba9-874c42807e28/volume/ipython_1617120878135/work
+ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+jedi @ file:///opt/concourse/worker/volumes/live/fb4a9bd9-ce20-4358-4d29-83b0746d57b6/volume/jedi_1606932574534/work
 joblib==1.0.1
 jupyter-client==5.3.3
 jupyter-core==4.5.0
 kiwisolver==1.3.1
 llvmlite==0.36.0
 matplotlib==3.4.2
+mkl-fft==1.3.0
+mkl-random @ file:///opt/concourse/worker/volumes/live/ee9c6651-7474-4ea3-40dc-9000610cf5d2/volume/mkl_random_1618853976708/work
+mkl-service==2.3.0
 numba==0.53.1
 numpy==1.21.0
 pandas==1.2.5
 parso==0.7.0
+pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
+pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
 Pillow==8.2.0
 prettytable==2.1.0
+prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1602688806899/work
+ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
+Pygments @ file:///tmp/build/80754af9/pygments_1600458456400/work
 pynndescent==0.5.2
 pyparsing==2.4.7
 python-dateutil==2.8.1
@@ -27,5 +40,8 @@ seaborn==0.11.1
 six==1.16.0
 sklearn==0.0
 threadpoolctl==2.1.0
+tornado @ file:///opt/concourse/worker/volumes/live/2c1a63a2-006b-48ee-56b9-0cfe8b4927f9/volume/tornado_1606942321278/work
+traitlets @ file:///tmp/build/80754af9/traitlets_1602787416690/work
 umap==0.1.1
 umap-learn==0.5.1
+wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
